--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="menu-link" href="#">music</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="#">travel</a>
+                    <a class="menu-link" href="#">travels1</a>
                 </li>
             </ul>
         </nav>
